fixed installation path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ endif()
 
 set(CZMAKE_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/czmake CACHE PATH "")
 if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
-    install(FILES czmake.cmake DESTINATION cmake-${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}/Modules)
-    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/czmake DESTINATION cmake-${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}/Modules
+    install(FILES czmake.cmake DESTINATION Modules)
+    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/czmake DESTINATION Modules
         PATTERN CMakeLists.txt EXCLUDE
         PATTERN .svn EXCLUDE
         PATTERN .git EXCLUDE
@@ -24,7 +24,7 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
     set(CPACK_MONOLITHIC_INSTALL ON)
     set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "czmake")
     set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
-    set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_ROOT}/Modules)
+    set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_ROOT})
     set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")
 
     INCLUDE(CPack)
