fix for building with NSIS on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,12 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
     set(CPACK_MONOLITHIC_INSTALL ON)
     set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "czmake")
     set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
-    set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_ROOT})
+
+    if(WIN32)
+        set(CPACK_NSIS_INSTALL_ROOT "${CMAKE_ROOT}")
+    else()
+        set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_ROOT})
+    endif()
     set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")
 
     INCLUDE(CPack)
