fixed installation folder for building with NSIS on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
 
     if(WIN32)
         set(CPACK_NSIS_INSTALL_ROOT "${CMAKE_ROOT}")
+        set(CPACK_PACKAGE_INSTALL_DIRECTORY ".")
     else()
         set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_ROOT})
     endif()
