fixed module path to find sip module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,9 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
     set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
 
     if(WIN32)
-        set(CPACK_NSIS_INSTALL_ROOT "${CMAKE_ROOT}")
-        set(CPACK_PACKAGE_INSTALL_DIRECTORY ".")
+        set(CPACK_NSIS_INSTALL_ROOT "czmake")
+        set(CPACK_PACKAGE_INSTALL_DIRECTORY "${CMAKE_ROOT}")
+        set(CPACK_NSIS_DISPLAY_NAME "czmake")
     else()
         set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_ROOT})
     endif()
